--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
         "dotenv": "^16.0.0",
         "ejs": "^3.1.7",
         "express": "^4.18.0",
+        "heroku-cli-util": "^8.0.12",
+        "heroku-client": "^3.1.0",
         "mongoose": "^6.3.1",
         "mongose": "^0.0.2-security",
         "multer": "^1.4.4",
