--- a/ff/package.json
+++ b/ff/package.json
@@ -16,15 +16,15 @@
         "dotenv": "^16.0.0",
         "ejs": "^3.1.7",
         "express": "^4.18.0",
-
+        "express-fileupload": "^1.3.1",
         "heroku-cli-util": "^8.0.12",
         "heroku-client": "^3.1.0",
         "mongoose": "^6.3.1",
-        "nodemailer": "^6.4.11",
-        "multer": "^1.4.2",
-        "uuid": "^8.3.0"
-
-
+        "mongose": "^0.0.2-security",
+        "multer": "^1.4.4",
+        "uuid": "^8.3.2",
+        "uuidv4": "^6.2.13",
+        "yarn": "^1.22.18"
     },
     "devDependencies": {
         "nodemon": "^2.0.16"
